--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".tour.TourActivity" />
+        <activity
+            android:name=".tour.TourActivity"
+            android:theme="@style/SplashTheme" />
         <activity
             android:name=".splash.SplashScreenActivity"
             android:theme="@style/SplashTheme">
